# pb/dateset.swagger.json
@@ -337,6 +337,10 @@
         "status": {
           "$ref": "#/definitions/datasetStatus",
           "title": "状态"
+        },
+        "startProcessNow": {
+          "type": "boolean",
+          "title": "创建后是否立即启动处理"
         }
       }
     },
@@ -354,8 +358,8 @@
       "type": "object",
       "properties": {
         "datasetId": {
-          "type": "integer",
-          "format": "int32",
+          "type": "string",
+          "format": "int64",
           "title": "数据集id. 必填"
         },
         "op": {
@@ -371,8 +375,8 @@
       "type": "object",
       "properties": {
         "datasetId": {
-          "type": "integer",
-          "format": "int32",
+          "type": "string",
+          "format": "int64",
           "title": "数据集id. 必填"
         },
         "op": {
@@ -388,8 +392,8 @@
       "type": "object",
       "properties": {
         "datasetId": {
-          "type": "integer",
-          "format": "int32",
+          "type": "string",
+          "format": "int64",
           "title": "数据集id. 必填"
         },
         "op": {
@@ -404,6 +408,11 @@
     "datasetAdminUpdateDatasetReq": {
       "type": "object",
       "properties": {
+        "datasetId": {
+          "type": "string",
+          "format": "int64",
+          "title": "数据集id. 必填"
+        },
         "datasetName": {
           "type": "string",
           "title": "数据集名"
@@ -570,8 +579,8 @@
       "type": "object",
       "properties": {
         "datasetId": {
-          "type": "integer",
-          "format": "int32",
+          "type": "string",
+          "format": "int64",
           "title": "数据集id. 必填"
         },
         "valueSn": {
@@ -585,8 +594,8 @@
       "type": "object",
       "properties": {
         "datasetId": {
-          "type": "integer",
-          "format": "int32",
+          "type": "string",
+          "format": "int64",
           "title": "数据集id"
         },
         "chunkSn": {
@@ -609,8 +618,8 @@
       "type": "object",
       "properties": {
         "datasetId": {
-          "type": "integer",
-          "format": "int32",
+          "type": "string",
+          "format": "int64",
           "title": "数据集id. 必填"
         }
       }
@@ -638,8 +647,8 @@
           "title": "每页返回数量, 最少返回5条"
         },
         "datasetId": {
-          "type": "integer",
-          "format": "int32",
+          "type": "string",
+          "format": "int64",
           "title": "数据集id"
         },
         "status": {
@@ -718,10 +727,12 @@
         "Status_Finished",
         "Status_Stopping",
         "Status_Stopped",
-        "Status_Finishing"
+        "Status_Finishing",
+        "Status_Deleting",
+        "Status_ChunkDeleted"
       ],
       "default": "Status_Created",
-      "description": "- Status_Created: 已创建\n - Status_Running: 运行中\n - Status_Finished: 已完成\n - Status_Stopping: 正在停止\n - Status_Stopped: 已停止\n - Status_Finishing: 正在完成",
+      "description": "- Status_Created: 已创建\n - Status_Running: 运行中\n - Status_Finished: 已完成\n - Status_Stopping: 正在停止\n - Status_Stopped: 已停止\n - Status_Finishing: 正在完成\n - Status_Deleting: 正在删除\n - Status_ChunkDeleted: 元数据已删除",
       "title": "状态"
     },
     "datasetValueProcess": {
